--- a/elementos.html
+++ b/elementos.html
@@ -8,16 +8,16 @@
 </head>
 <body>  
 
-    <header>
-        <h1>The Face of Bahamut</h1>
-        <div>
+    <div class="header" id="header">     
+        <div class="logo_header"></div>
+        <div class="navigation_header" id="navigation_header">
             <a href="index.html">INÍCIO</a>
             <a href="regras.html">REGRAS</a>
-            <a href="#">ELEMENTOS</a>
+            <a href="#" class="active">ELEMENTOS</a>
             <a href="jogo.html">JOGO</a>
             <a href="sobre.html">SOBRE</a>
         </div>
-    </header>
+    </div>
 
     <!-- Seção 1 -->
     <section class="inicio secundary">
