--- a/jogo.html
+++ b/jogo.html
@@ -7,16 +7,16 @@
     <title>Jogo - The Face of Bahamut</title>
 </head>
 <body>  
-    <header>
-        <h1>The Face of Bahamut</h1>
-        <div>
+    <div class="header" id="header">     
+        <div class="logo_header"></div>
+        <div class="navigation_header" id="navigation_header">
             <a href="index.html">INÍCIO</a>
             <a href="regras.html">REGRAS</a>
             <a href="elementos.html">ELEMENTOS</a>
-            <a href="#">JOGO</a>
+            <a href="#" class="active">JOGO</a>
             <a href="sobre.html">SOBRE</a>
         </div>
-    </header>
+    </div>
     <!-- Seção 1 -->
     <section class="inicio secundary">
         <div>
