--- a/elementos.html
+++ b/elementos.html
@@ -1,76 +1,93 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Elementos - The Face of Bahamut</title>
 </head>
-<body>  
 
-    <div class="header" id="header">     
-        <div class="logo_header"></div>
-        <div class="navigation_header" id="navigation_header">
-            <a href="index.html">INÍCIO</a>
-            <a href="regras.html">REGRAS</a>
-            <a href="#" class="active">ELEMENTOS</a>
-            <a href="jogo.html">JOGO</a>
-            <a href="sobre.html">SOBRE</a>
-        </div>
-    </div>
+<body>
 
-    <!-- Seção 1 -->
-    <section class="inicio secundary">
-        <div>
+    <!-- Cabeçalho -->
+    <header>
+        <section class="navigation_header">
+            <a href="index.html">inicio</a>
+            <a href="regras.html">regras</a>
+            <a href="#" class="active" onclick="scrollToTop()">elementos</a>
+            <a href="jogo.html">jogo</a>
+            <a href="sobre.html">sobre</a>
+        </section>
+    </header>
+
+    <!-- Seção global -->
+    <section class="content">
+        <!-- Seção 1 -->
+        <section class="inicio secundary">
             <div>
-                <h2>Elementos do Jogo</h2>
+                <div>
+                    <h2>Elementos do Jogo</h2>
+                </div>
+                <img src="img/bahamuuuuut 1.svg" />
             </div>
-            <img src="img/bahamuuuuut 1.svg" alt="" srcset="">
-        </div>
-    </section>
+        </section>
 
-    <!-- Seção 2 -->
-    <section class="regras primary">    
-        <div>
+        <!-- Seção 2 -->
+        <section class="elementos primary">
             <div>
-                <h2>Componentes</h2>
-                <p>•	1 Tabuleiro (50x50cm).</p>
-                <p>•	4 Peões.</p>
-                <p>•	72 Cartas Numeradas (0 a 9) em quatro cores.</p>
-                <p>•	40 Cartas de Sabotagem.</p>
-                <p>•	25 Cartas de Recompensa.</p>
-                <p>•	2 Dados.</p>
-                <p>•	4 Dados coloridos (4 cores).</p>
-                <p>•	20 Manas coloridas (4 cores).</p>
+                <div>
+                    <h2>Componentes</h2>
+
+                    <p>• 1 Tabuleiro (50x50cm).</p>
+                    <p>• 4 Peões.</p>
+                    <p>• 72 Cartas Numeradas (0 a 9) em quatro cores.</p>
+                    <p>• 40 Cartas de Sabotagem.</p>
+                    <p>• 25 Cartas de Recompensa.</p>
+                    <p>• 2 Dados.</p>
+                    <p>• 4 Dados coloridos (4 cores).</p>
+                    <p>• 20 Manas coloridas (4 cores).</p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
         <!-- Seção 3 -->
-    <section class="regras secundary">    
-        <div>
+        <section class="elementos secundary">
             <div>
-                <h2>Cartas de Sabotagem</h2>
-                <p>•	(-3) Retroceder 3 Casas.</p>
-                <p>•	(-2) Retroceder 2 Casas.</p>
-                <p>•	(Bloqueio) Bloqueia o próximo jogador.</p>
-                <p>•	(Inversora) Inverte a direção do jogo.</p>
-                <p>•	(Espelho) Reflete a carta de sabotagem usada de volta ao jogador que a lançou</p>
-        </div>
-    </section>
+                <div>
+                    <h2>Cartas de Sabotagem</h2>
+
+                    <p>• (-3) Retroceder 3 Casas.</p>
+                    <p>• (-2) Retroceder 2 Casas.</p>
+                    <p>• (Bloqueio) Bloqueia o próximo jogador.</p>
+                    <p>• (Inversora) Inverte a direção do jogo.</p>
+                    <p>• (Espelho) Reflete a carta de sabotagem usada de volta ao jogador que a lançou</p>
+                </div>
+        </section>
 
         <!-- Seção 4 -->
-    <section class="regras primary">    
-        <div>
+        <section class="elementos primary">
             <div>
-                <h2>O Tabuleiro</h2>
-                <p>•	1 Tabuleiro (50x50cm).</p>
-                <p>•	80 Casas numeradas(1 a 9).</p>
-                <p>•	...em quatro cores.</p>
-                <p>•    ...representando os tipos de terreno (terra, água, céu, fogo)
-                <p>•	5 Casas no tabuleiro denominados “breu”.</p>
+                <div>
+                    <h2>Tabuleiro</h2>
+
+                    <p>• 1 Tabuleiro (50x50cm).</p>
+                    <p>• 80 Casas numeradas(1 a 9).</p>
+                    <p>• ...em quatro cores.</p>
+                    <p>• ...representando os tipos de terreno (terra, água, céu, fogo)
+                    <p>• 5 Casas no tabuleiro denominados “breu”.</p>
+                </div>
             </div>
-        </div>
+        </section>
     </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <small>Desenvolvido em novembro de 2023 para o curso de graduação em
+            Jogos Digitais - FATEC/SP
+        </small>
+    </footer>
+
 </body>
-</html>    
+
+</html>
