--- a/regras.html
+++ b/regras.html
@@ -7,6 +7,7 @@
         <title>Regras - The Face of Bahamut</title>
     </head>
     <body>
+        <!-- Cabeçalho -->
         <header>
             <section class="navigation_header">
                 <a href="index.html">inicio</a>
@@ -16,7 +17,6 @@
                 <a href="sobre.html">sobre</a>
             </section>
         </header>
-        
         <!-- Seção global -->
         <section class="content">
             <!-- Seção 1 -->
@@ -28,6 +28,8 @@
                     <img src="img/bahamuuuuut 1.svg" />
                 </div>
             </section>
+
+            
             <!-- Seção 2 -->
             <section class="regras1 primary">
                 <div>
@@ -76,6 +78,7 @@
                 </div>
             </section>
         </section>
+        <!-- Rodapé -->
         <footer>
             <small
                 >Desenvolvido em novembro de 2023 para o curso de graduação em
