--- a/sobre.html
+++ b/sobre.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Sobre - The Face of Bahamut</title>
 </head>
-<body>  
-    <div class="header" id="header">     
-        <div class="logo_header"></div>
-        <div class="navigation_header" id="navigation_header">
-            <a href="index.html">INÍCIO</a>
-            <a href="regras.html">REGRAS</a>
-            <a href="elementos.html">ELEMENTOS</a>
-            <a href="jogo.html">JOGO</a>
-            <a href="#" class="active">SOBRE</a>
-        </div>
-    </div>
-    <!-- Seção 1 -->
-    <section class="inicio secundary">
-        <div>
-            <div>
-                <h2>Sobre</h2>
-            </div>
-            <img src="img/bahamuuuuut 1.svg" alt="" srcset="">
-        </div>
-    </section>
-    <!-- Seção 2 -->
-    <section class="regras primary">    
-        <div>
-            <div>
-                <h2>O jogo</h2>
-                <p>Esse jogo foi elaborado para a disciplina de princípios dos jogos digitais, componente do primeiro período do curso de graduação em tecnologia em jogos digitais.</p>
-                <p>A finalidade desse jogo é meramente porporcionar conhecimento aos alunos envolvidos.</p>
-            </div>
-        </div>
-    </section>    
-    <!-- Seção 3 -->
-    <section class="regras secundary">    
-        <div>
-            <div>
-                <h2>O website</h2>
-                <p>Esse website foi elaborado para a disciplina de tecnologia da informação nas organizações, também componente do primeiro período do curso de graduação em tecnologia em jogos digitais.</p>
-                <p>A finalidade desse website é meramente porporcionar conhecimento aos alunos envolvidos.</p>
-            </div>
-        </div>
-    </section>
 
-    <!-- Seção 3 -->
-    <section class="regras primary">    
-        <div>
+<body>
+    <!-- Cabeçalho -->
+    <header>
+        <section class="navigation_header">
+            <a href="index.html">inicio</a>
+            <a href="regras.html">regras</a>
+            <a href="elementos.html">elementos</a>
+            <a href="jogo.html">jogo</a>
+            <a href="#" class="active" onclick="scrollToTop()">sobre</a>
+        </section>
+    </header>
+
+    <!-- Seção global -->
+    <section class="content">
+
+        <!-- Seção 1 -->
+        <section class="inicio secundary">
             <div>
-                <h2>A instituição de Ensino</h2>
-                <p>Fatec Americana Ministro Ralph Biasi.</p>
-                <p>A Fatec Americana está situada no município paulista de Americana, no interior do Estado de São Paulo.</p>
-                <p>website: https://www.fatec.edu.br/cursos/jogos-digitais</p>
-                <img src="img/fatec.png" alt="">
-            </div>       
-        </div>
-    </section>
+                <div>
+                    <h2>Sobre</h2>
+                </div>
+                <img src="img/bahamuuuuut 1.svg" />
+            </div>
+        </section>
+
+
+        <!-- Seção 2 -->
+        <section class="regras1 primary">
+            <div>
+                <div>
+                    <h2>O jogo</h2>
+                    <p>Esse jogo foi elaborado para a disciplina de princípios dos jogos digitais, componente do
+                        primeiro período do curso de graduação em tecnologia em jogos digitais.</p>
+                    <p>A finalidade desse jogo é meramente porporcionar conhecimento aos alunos envolvidos.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Seção 3 -->
+        <section class="regras2 secundary">
+            <div>
+                <div>
+                    <h2>O website</h2>
+                    <p>Esse website foi elaborado para a disciplina de tecnologia da informação nas organizações, também
+                        componente do primeiro período do curso de graduação em tecnologia em jogos digitais.</p>
+                    <p>A finalidade desse website é meramente porporcionar conhecimento aos alunos envolvidos.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Seção 3 -->
+        <section class="regras1 primary">
+            <div>
+                <div>
+                    <h2>A instituição de Ensino</h2>
+                    <p>Fatec Americana Ministro Ralph Biasi.</p>
+                    <p>A Fatec Americana está situada no município paulista de Americana, no interior do Estado de São
+                        Paulo.</p>
+                    <p>website: <a>https://www.fatec.edu.br/cursos/jogos-digitais</a></p>
+                    
+                </div>
+                <div>
+                    <img src="img/fatec.png" alt="">
+                </div>
+            </div>
+        </section>
 
         <!-- Seção 4 -->
-        <section class="regras secundary">    
+        <section class="regras2 secundary">
             <div>
                 <div>
                     <h2>O Curso</h2>
@@ -69,6 +83,14 @@
                 </div>
             </div>
         </section>
+    </section>
+    <!-- Rodapé -->
+    <footer>
+        <small>Desenvolvido em novembro de 2023 para o curso de graduação em
+            Jogos Digitais - FATEC/SP
+        </small>
+    </footer>
 
 </body>
+
 </html>
