--- a/regras.html
+++ b/regras.html
@@ -1,89 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
-        <title>Regras - The Face of Bahamut</title>
-    </head>
-    <body>
-        <!-- Cabeçalho -->
-        <header>
-            <section class="navigation_header">
-                <a href="index.html">inicio</a>
-                <a href="#" class="active" onclick="scrollToTop()">regras</a>
-                <a href="elementos.html">elementos</a>
-                <a href="jogo.html">jogo</a>
-                <a href="sobre.html">sobre</a>
-            </section>
-        </header>
-        <!-- Seção global -->
-        <section class="content">
-            <!-- Seção 1 -->
-            <section class="inicio secundary">
-                <div>
-                    <div>
-                        <h2>Regras</h2>
-                    </div>
-                    <img src="img/bahamuuuuut 1.svg" />
-                </div>
-            </section>
 
-            
-            <!-- Seção 2 -->
-            <section class="regras1 primary">
-                <div>
-                    <div>
-                        <h2>Sabotando o amigo</h2>
-                        <p>
-                            A sabotagem não terá efeito sobre jogador atingindo
-                            se a cor da forma dele corresponder à cor da carta.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <!-- Seção 3 -->
-            <section class="regras2 secundary">
-                <div>
-                    <div>
-                        <h2>Cartas de recompensa</h2>
-                        <p>
-                            As cartas de “recompensa” devem ser compradas ou
-                            utilizadas antes do lançamento dos dados não
-                            interferindo no seu turno.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <!-- Seção 4 -->
-            <section class="regras1 primary">
-                <div>
-                    <div>
-                        <h2>Breu</h2>
-                        <p>
-                            Quando um jogador cair na casa denominada "Breu", no
-                            próximo turno, esse jogador deverá lançar os dados.
-                        </p>
-                        <p>
-                            Se, em qualquer um dos dados lançados, o número 6
-                            aparecer, ele avançará uma número de casas igual ao
-                            resultado dos dados lançados.
-                        </p>
-                        <p>
-                            Caso o número 6 não seja obtido, o jogador
-                            permanecerá preso e aguardará o próximo turno para
-                            jogar normalmente.
-                        </p>
-                    </div>
-                </div>
-            </section>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Regras - The Face of Bahamut</title>
+</head>
+
+<body>
+    <!-- Cabeçalho -->
+    <header>
+        <section class="navigation_header">
+            <a href="index.html">inicio</a>
+            <a href="#" class="active" onclick="scrollToTop()">regras</a>
+            <a href="elementos.html">elementos</a>
+            <a href="jogo.html">jogo</a>
+            <a href="sobre.html">sobre</a>
         </section>
-        <!-- Rodapé -->
-        <footer>
-            <small
-                >Desenvolvido em novembro de 2023 para o curso de graduação em
-                Jogos Digitais - FATEC/SP
-            </small>
-        </footer>
-    </body>
+    </header>
+    <!-- Seção global -->
+    <section class="content">
+        <!-- Seção 1 -->
+        <section class="inicio secundary">
+            <div>
+                <div>
+                    <h2>Regras</h2>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Seção 2 -->
+        <section class="regras1 primary">
+            <div>
+                <div>
+                    <h2>Sabotando o amigo</h2>
+                    <p>
+                        A sabotagem não terá efeito sobre jogador atingindo
+                        se a cor da forma dele corresponder à cor da carta.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Seção 3 -->
+        <section class="regras2 secundary">
+            <div>
+                <div>
+                    <h2>Cartas de recompensa</h2>
+                    <p>
+                        As cartas de “recompensa” devem ser compradas ou
+                        utilizadas antes do lançamento dos dados não
+                        interferindo no seu turno.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Seção 4 -->
+        <section class="regras1 primary">
+            <div>
+                <div>
+                    <h2>Breu</h2>
+                    <p>
+                        Quando um jogador cair na casa denominada "Breu", no
+                        próximo turno, esse jogador deverá lançar os dados.
+                    </p>
+                    <p>
+                        Se, em qualquer um dos dados lançados, o número 6
+                        aparecer, ele avançará uma número de casas igual ao
+                        resultado dos dados lançados.
+                    </p>
+                    <p>
+                        Caso o número 6 não seja obtido, o jogador
+                        permanecerá preso e aguardará o próximo turno para
+                        jogar normalmente.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </section>
+    <!-- Rodapé -->
+    <footer>
+        <small>Desenvolvido em novembro de 2023 para o curso de graduação em
+            Jogos Digitais - FATEC/SP
+        </small>
+    </footer>
+</body>
+
 </html>
