--- a/index.html
+++ b/index.html
@@ -1,203 +1,204 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
-        <title>The Face of Bahamut</title>
-    </head>
 
-    <body>
-        <header>
-            <section class="navigation_header">
-                <a href="#" class="active" onclick="scrollToTop()">INÍCIO</a>
-                <a href="regras.html">regras</a>
-                <a href="elementos.html">elementos</a>
-                <a href="jogo.html">jogo</a>
-                <a href="sobre.html">sobre</a>
-            </section>
-        </header>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>The Face of Bahamut</title>
+</head>
 
-        <section class="content">
-            <section class="inicio secundary">
+<body>
+    <header>
+        <section class="navigation_header">
+            <a href="#" class="active" onclick="scrollToTop()">INÍCIO</a>
+            <a href="regras.html">regras</a>
+            <a href="elementos.html">elementos</a>
+            <a href="jogo.html">jogo</a>
+            <a href="sobre.html">sobre</a>
+        </section>
+    </header>
+
+    <section class="content">
+        <section class="inicio secundary">
+            <div>
                 <div>
-                    <div>
-                        <h2>The Face Of Bahamut</h2>
-                    </div>
-                    <img src="img/bahamuuuuut 1.svg" />
+                    <h2>The Face Of Bahamut</h2>
                 </div>
-            </section>
+                <img src="img/bahamuuuuut 1.svg" />
+            </div>
+        </section>
 
-            <!-- Nova Seção: A Jornada de Bahamut -->
-            <section class="jornada primary">
+        <!-- Nova Seção: A Jornada de Bahamut -->
+        <section class="jornada primary">
+            <div>
+                <div>
+                    <h2>história</h2>
+                    <p>
+                        Há éons, as entidades celestiais estavam preocupadas
+                        com o desequilíbrio causado pelas várias formas de
+                        Bahamut, que interferiam na harmonia existencial.
+                        Para restaurar o equilíbrio, essas entidades
+                        decidiram tomar uma ação drástica. Elas aprisionaram
+                        as quatro formas de Bahamut - o Peixe, o Touro, o
+                        Anjo e o Dragão - dentro de uma serpente gigante
+                        ancestral conhecida como a "Serpente de Avalon".
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="redencao secundary">
+            <div>
+                <div>
+                    <h2>redenção</h2>
+                    <p>
+                        Um desafio sagrado foi estabelecido. As formas de
+                        Bahamut teriam que lutar entre si, e somente uma
+                        delas poderia sair vitoriosa da Serpente de Avalon.
+                        Essa forma se tornaria a única e verdadeira
+                        representação de Bahamut, restaurando assim o
+                        equilíbrio no mundo.
+                    </p>
+                    <p>
+                        O Desafio da Redenção de Bahamut é uma jornada
+                        épica, onde cada jogador luta para garantir que a
+                        forma que escolher represente a personificação de
+                        Bahamut. Estratégia, cooperação e escolhas sábias de
+                        cartas são essenciais para superar os desafios da
+                        Serpente de Avalon, um caminho de perigos e enigmas
+                        que representam os elementos do mundo.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="jornada primary">
+            <div>
+                <div>
+                    <h2>jornada</h2>
+                    <p>
+                        Cada jogador deve provar que sua forma é digna de
+                        ser a única representação de Bahamut. A competição
+                        entre as quatro formas é feroz, e somente uma delas
+                        conseguirá escapar da Serpente de Avalon,
+                        demonstrando um profundo entendimento e respeito
+                        pelos princípios de Bahamut.
+                    </p>
+                    <p>
+                        No final, a redenção do mundo e a restauração do
+                        equilíbrio dependem da escolha sábia dos jogadores e
+                        da forma que conseguir escapar da Serpente de
+                        Avalon.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="cartas secundary">
+            <h2>cartas numeradas</h2>
+
+            <section class="cartas-numeradas">
                 <div>
                     <div>
-                        <h2>história</h2>
-                        <p>
-                            Há éons, as entidades celestiais estavam preocupadas
-                            com o desequilíbrio causado pelas várias formas de
-                            Bahamut, que interferiam na harmonia existencial.
-                            Para restaurar o equilíbrio, essas entidades
-                            decidiram tomar uma ação drástica. Elas aprisionaram
-                            as quatro formas de Bahamut - o Peixe, o Touro, o
-                            Anjo e o Dragão - dentro de uma serpente gigante
-                            ancestral conhecida como a "Serpente de Avalon".
-                        </p>
+                        <img src="img/image 10.png" alt="" />
+                        <img src="img/image 10.png" alt="" />
                     </div>
                 </div>
-            </section>
-
-            <section class="redencao secundary">
                 <div>
                     <div>
-                        <h2>redenção</h2>
-                        <p>
-                            Um desafio sagrado foi estabelecido. As formas de
-                            Bahamut teriam que lutar entre si, e somente uma
-                            delas poderia sair vitoriosa da Serpente de Avalon.
-                            Essa forma se tornaria a única e verdadeira
-                            representação de Bahamut, restaurando assim o
-                            equilíbrio no mundo.
-                        </p>
-                        <p>
-                            O Desafio da Redenção de Bahamut é uma jornada
-                            épica, onde cada jogador luta para garantir que a
-                            forma que escolher represente a personificação de
-                            Bahamut. Estratégia, cooperação e escolhas sábias de
-                            cartas são essenciais para superar os desafios da
-                            Serpente de Avalon, um caminho de perigos e enigmas
-                            que representam os elementos do mundo.
-                        </p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="jornada primary">
-                <div>
-                    <div>
-                        <h2>jornada</h2>
-                        <p>
-                            Cada jogador deve provar que sua forma é digna de
-                            ser a única representação de Bahamut. A competição
-                            entre as quatro formas é feroz, e somente uma delas
-                            conseguirá escapar da Serpente de Avalon,
-                            demonstrando um profundo entendimento e respeito
-                            pelos princípios de Bahamut.
-                        </p>
-                        <p>
-                            No final, a redenção do mundo e a restauração do
-                            equilíbrio dependem da escolha sábia dos jogadores e
-                            da forma que conseguir escapar da Serpente de
-                            Avalon.
-                        </p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="cartas secundary">
-                <h2>cartas numeradas</h2>
-
-                <section class="cartas-numeradas">
-                    <div>
-                        <div>
-                            <img src="img/image 10.png" alt="" />
-                            <img src="img/image 10.png" alt="" />
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <img src="img/image 1.png" alt="" />
-                            <img src="img/image 2.png" alt="" />
-                        </div>
-                    </div>
-                </section>
-                <section class="cartas-numeradas">
-                    <div>
-                        <div>
-                            <img src="img/image 10.png" alt="" />
-                            <img src="img/image 10.png" alt="" />
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="img/image 7.png" alt="" />
-                            <img src="img/image 9.png" alt="" />
-                        </div>
-                    </div>
-                </section>
-            </section>
-
-            <section class="cartas primary">
-                <h2>cartas sabotagem</h2>
-                <section class="cartas-sabotagem">
-                    <div>
-                        <div>
-                            <img src="img/image 10.png" alt="" />
-                            <img src="img/image 10.png" alt="" />
-                        </div>
-                    </div>
-
-                    <div>
-                        <div>
-                            <img src="img/image 5.png" alt="" />
-                            <img src="img/image 11.png" alt="" />
-                        </div>
-                    </div>
-                </section>
-
-                <section class="cartas-sabotagem">
-                    <div>
-                        <div>
-                            <img src="img/image 10.png" alt="" />
-                            <img src="img/image 10.png" alt="" />
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <img src="img/image 13.png" alt="" />
-                            <img src="img/image 14.png" alt="" />
-                        </div>
-                    </div>
-                </section>
-            </section>
-
-            <section class="cartas secundary">
-                <h2>Cartas Recompensa</h2>
-                <section class="cartas-recompensa">
-                    <div>
-                        <div>
-                            <img src="img/Bahamut.png" alt="" />
-                        </div>
-                    </div>
-                </section>
-            </section>
-
-            <section class="tabuleiro primary">
-                <h2>tabuleiro</h2>
-                <div>
-                    <div>
-                        <img src="img/tabuleiro.jpeg" alt="" />
+                        <img src="img/image 1.png" alt="" />
+                        <img src="img/image 2.png" alt="" />
                     </div>
                 </div>
             </section>
-
-            <section class="como-jogar secundary">
-                <h2>jogo</h2>
+            <section class="cartas-numeradas">
                 <div>
                     <div>
-                        <img src="img/jogo.png" alt="" />
+                        <img src="img/image 10.png" alt="" />
+                        <img src="img/image 10.png" alt="" />
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <img src="img/image 7.png" alt="" />
+                        <img src="img/image 9.png" alt="" />
                     </div>
                 </div>
             </section>
         </section>
 
-        <footer>
-            <small
-                >Desenvolvido em novembro de 2023 para o curso de graduação em
-                Jogos Digitais - FATEC/SP
-            </small>
-        </footer>
-    </body>
+        <section class="cartas primary">
+            <h2>cartas sabotagem</h2>
+            <section class="cartas-sabotagem">
+                <div>
+                    <div>
+                        <img src="img/image 10.png" alt="" />
+                        <img src="img/image 10.png" alt="" />
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <img src="img/image 5.png" alt="" />
+                        <img src="img/image 11.png" alt="" />
+                    </div>
+                </div>
+            </section>
+
+            <section class="cartas-sabotagem">
+                <div>
+                    <div>
+                        <img src="img/image 10.png" alt="" />
+                        <img src="img/image 10.png" alt="" />
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="img/image 13.png" alt="" />
+                        <img src="img/image 14.png" alt="" />
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <section class="cartas secundary">
+            <h2>Cartas Recompensa</h2>
+            <section class="cartas-recompensa">
+                <div>
+                    <div>
+                        <img src="img/image 8.png" alt="" />
+                    </div>
+                </div>
+            </section>
+        </section>
+
+        <section class="tabuleiro primary">
+            <h2>tabuleiro</h2>
+            <div>
+                <div>
+                    <img src="img/tabuleiro.jpeg" alt="" />
+                </div>
+            </div>
+        </section>
+
+        <section class="como-jogar secundary">
+            <h2>jogo</h2>
+            <div>
+                <div>
+                    <img src="img/jogo.png" alt="" />
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <footer>
+        <small>Desenvolvido em novembro de 2023 para o curso de graduação em
+            Jogos Digitais - FATEC/SP
+        </small>
+    </footer>
+</body>
+
 </html>
